# tidying-first-in-python

./: README.md  pyproject.toml
src/tidy_first/: cli.py
src/tidy_first/tidyings/: __init__.py  chunk_statements.py  cohesion_order.py  dead_code.py  delete_redundant_comments.py  explaining_comments.py  explaining_constants.py  explaining_variables.py  explicit_parameters.py  extract_helper.py  guard_clauses.py  move_declaration_and_initialisation_together.py  new_interface_old_implementation.py  normalise_symmetries.py  one_pile.py  reading_order.py
